building nav bar mobile, font weight may be an issue. z-index next and scroll.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    @font-face {
+        .libre-caslon-display-regular {
+            font-family: "Libre Caslon Display", serif;
+            font-weight: 400;
+            font-style: normal;
+          }
+          
+    }
+}
+
+/* libre calrson text? vs display */
